--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.4.1",
     "react-select": "^5.10.1"
   },
