--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-loading-skeleton": "^3.5.0",
+    "react-paginate": "^8.3.0",
     "react-router-dom": "^7.4.1",
     "react-select": "^5.10.1"
   },
